# easy-llms

./: .gitignore  LICENSE  README.md  __init__.py  easy_llms.py  pyproject.toml  requirements.txt  test.py  test_inference.py
easyllms/: __init__.py  easy_llms.py
easyllms/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  xai_provider.py
providers/: openai_provider.py  xai.py
